--- a/src/main/java/dk/eazyit/eazyregnskab/web/app/AboutPage.html
+++ b/src/main/java/dk/eazyit/eazyregnskab/web/app/AboutPage.html
@@ -2,10 +2,12 @@
         "http://www.w3.org/TR/html4/loose.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:wicket="http://wicket.apache.org/">
 <body>
+
 <wicket:extend>
 
-This is a secure page.
+    this is the about page
 
 </wicket:extend>
+
 </body>
 </html>
