#1: Create login and autorization structure

--- a/src/main/java/dk/eazyit/eazyregnskab/web/app/LoginPage.html
+++ b/src/main/java/dk/eazyit/eazyregnskab/web/app/LoginPage.html
@@ -30,7 +30,9 @@
         <div class="control-group">
             <div class="controls">
                 <label class="checkbox">
-                    <input type="checkbox"> Remember me
+                    <input id="_spring_security_remember_me" name="_spring_security_
+                       remember_me" type="checkbox" value="true">
+                    <wicket:message key="remember.me"></wicket:message>
                 </label>
                 <button type="submit" class="btn">
                     <wicket:message key="login"></wicket:message>
