--- a/src/main/java/dk/eazyit/eazyregnskab/web/app/secure/bookkeeping/AddBookkeepinglinePage.html
+++ b/src/main/java/dk/eazyit/eazyregnskab/web/app/secure/bookkeeping/AddBookkeepinglinePage.html
@@ -1,26 +1,13 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"
         "http://www.w3.org/TR/html4/loose.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:wicket="http://wicket.apache.org/">
-<head>
-    <title></title>
-</head>
-
 <body>
 
-<div class="row-fluid">
+<wicket:extend>
 
-    <div class="span12">
-        <div wicket:id="topMenu">
-        </div>
-    </div>
+    this is the about page
 
-</div>
-
-<wicket:child>
-
-
-</wicket:child>
-
+</wicket:extend>
 
 </body>
 </html>
