#2: Design front page and public subpages

--- a/src/main/java/dk/eazyit/eazyregnskab/web/app/front/HomePage.html
+++ b/src/main/java/dk/eazyit/eazyregnskab/web/app/front/HomePage.html
@@ -12,7 +12,7 @@
         <div class="jumbotron">
             <h1><wicket:message key="eazy.regnskab"></wicket:message>!</h1>
 
-            <p class="lead">Åååååå.</p>
+            <p class="lead"><wicket:message key="lead.text"></wicket:message>.</p>
             <a wicket:id="signUp" class="btn btn-large btn-success" href="#"><wicket:message key="get.started.today"></wicket:message></a>
         </div>
 
@@ -23,10 +23,7 @@
             <div class="span4">
                 <h2><wicket:message key="what.you.get"></wicket:message></h2>
 
-                <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor
-                   mauris
-                   condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis
-                   euismod. Donec sed odio dui. </p>
+                <p> <wicket:message key="what.you.get.text"></wicket:message></p>
 
                 <p><a wicket:id="whatYouGet" class="btn" href="#"><wicket:message key="view.details"></wicket:message> &raquo;</a></p>
             </div>
@@ -34,10 +31,7 @@
             <div class="span4">
                 <h2><wicket:message key="for.administrators"></wicket:message></h2>
 
-                <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor
-                   mauris
-                   condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis
-                   euismod. Donec sed odio dui. </p>
+                <p> <wicket:message key="for.administrators.text"></wicket:message></p>
 
                 <p><a wicket:id="forAdministrators" class="btn" href="#"><wicket:message key="view.details"></wicket:message> &raquo;</a></p>
             </div>
@@ -45,10 +39,7 @@
             <div class="span4">
                 <h2><wicket:message key="pricing"></wicket:message></h2>
 
-                <p>Donec sed odio dui. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Vestibulum id ligula
-                   porta felis euismod semper. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh,
-                   ut
-                   fermentum massa.</p>
+                <p> <wicket:message key="pricing.text"></wicket:message></p>
 
                 <p><a wicket:id="pricing" class="btn" href="#"><wicket:message key="view.details"></wicket:message> &raquo;</a></p>
             </div>
