--- a/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/app/front/SignUpPage.html
+++ b/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/app/front/SignUpPage.html
@@ -16,6 +16,7 @@
 
 
                 <form wicket:id="create_account" class="form-horizontal">
+                    <fieldset>
                     <div class="controls">
                         <h1>
                             <wicket:message key="create.account"></wicket:message>
@@ -61,6 +62,7 @@
                             </button>
                         </div>
                     </div>
+                        </fieldset>
                 </form>
             </div>
         </div>
