--- a/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/app/secure/settings/SettingsPage.html
+++ b/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/app/secure/settings/SettingsPage.html
@@ -1,12 +1,10 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"
         "http://www.w3.org/TR/html4/loose.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:wicket="http://wicket.apache.org/">
+<head>
+    <title></title>
+</head>
 <body>
-
-<wicket:extend>
-
-
-</wicket:extend>
 
 </body>
 </html>
