#23: Spring login error feedback

--- a/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/app/front/LoginPage.html
+++ b/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/app/front/LoginPage.html
@@ -13,6 +13,7 @@
 
                 <br><br><br><br><br><br>
 
+                <div wicket:id="feedback"></div>
 
                 <form class="form-horizontal" action="j_spring_security_check" method="post">
                     <fieldset>
