--- a/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/app/secure/settings/ChartOfAccountsPage.html
+++ b/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/app/secure/settings/ChartOfAccountsPage.html
@@ -5,6 +5,39 @@
 
 <wicket:extend>
 
+    <form wicket:id="financeAccountEdit" class="form-inline">
+
+        <table class="table">
+            <tr>
+                <th>
+                    <wicket:message key="name"></wicket:message>
+                </th>
+                <th>
+                    <wicket:message key="accountNumber"></wicket:message>
+                </th>
+                <th>
+                    <wicket:message key="vatType"></wicket:message>
+                </th>
+                <th>
+                    <wicket:message key="financeAccountType"></wicket:message>
+                </th>
+            </tr>
+            <tr>
+                <td><input wicket:id="name" id="name" type="text"/></td>
+                <td><input wicket:id="accountNumber" id="accountNumber" type="text"/></td>
+                <td><select wicket:id="vatType" id="vatType" type="text"/></td>
+                <td><select wicket:id="financeAccountType" id="financeAccountType" type="text"/></td>
+            </tr>
+            <tr>
+                <td colspan="3">
+                    <input wicket:id="save" class="btn btn-success" type="submit" value="save"/>
+                    <input wicket:id="new" class="btn btn-info" type="submit" value="new"/>
+                    <input wicket:id="delete" class="btn btn-danger" type="submit" value="delete"/>
+                </td>
+            </tr>
+        </table>
+    </form>
+
     <table class="table" cellspacing="0" wicket:id="chartOfAccounts">[table]</table>
 
 </wicket:extend>
