--- a/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/app/secure/bookkeeping/BookkeepingPage.html
+++ b/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/app/secure/bookkeeping/BookkeepingPage.html
@@ -13,8 +13,9 @@
     </style>
 
     <div class="row">
-        <div class="span9">
-            <wicket:message key="daily.ledger"></wicket:message> <select wicket:id="dailyLedgerList"></select>
+        <div class="span10">
+            <h6><wicket:message key="daily.ledger"></wicket:message></h6>
+            <select wicket:id="dailyLedgerList"></select>
         </div>
     </div>
 
@@ -77,7 +78,7 @@
 
 
     <div class="row">
-        <div class="span9">
+        <div class="span10">
             <table class="table" cellspacing="0" wicket:id="chartOfFinancePostings">[table]</table>
         </div>
     </div>
