#50: Create validators for all forms.
VatType

--- a/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/app/secure/settings/VatTypesPage.html
+++ b/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/app/secure/settings/VatTypesPage.html
@@ -23,7 +23,7 @@
             <tr>
                 <td><input class="span2" wicket:id="name" id="name" type="text"/></td>
                 <td><input class="span2" wicket:id="percentage" id="percentage" type="number"/></td>
-                <td><select class="span2" wicket:id="financeAccount" id="financeAccount" type="number"/></td>
+                <td><input class="span2" wicket:id="financeAccount" id="financeAccount" type="hidden"/></td>
 
             </tr>
             <tr>
