#41: Email confirmed registration

--- a/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/app/front/SignUpPage.html
+++ b/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/app/front/SignUpPage.html
@@ -58,6 +58,17 @@
                         </div>
 
                         <div class="control-group">
+                            <label class="control-label" for="email">
+                                <wicket:message key="email"></wicket:message>
+                            </label>
+
+                            <div class="controls">
+                                <input id="email" wicket:id="email" class="input-block-level"
+                                       type='email' value=''>
+                            </div>
+                        </div>
+
+                        <div class="control-group">
                             <div class="controls">
                                 <button type="submit" class="btn">
                                     <wicket:message key="create.account"></wicket:message>
