#65: Attach loading behavior to buttons

--- a/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/app/front/LoginPage.html
+++ b/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/app/front/LoginPage.html
@@ -52,7 +52,7 @@
                        remember_me" type="checkbox" value="true">
                                     <wicket:message key="remember.me"></wicket:message>
                                 </label>
-                                <button type="submit" class="btn">
+                                <button wicket:id="login" type="submit" class="btn">
                                     <wicket:message key="login"></wicket:message>
                                 </button>
                             </div>
