#66: Create headline and sum finance accounts

--- a/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/app/secure/settings/ChartOfAccountsPage.html
+++ b/mainwar/src/main/java/dk/eazyit/eazyregnskab/web/app/secure/settings/ChartOfAccountsPage.html
@@ -29,8 +29,21 @@
                 <td><input class="span2" wicket:id="accountNumber" id="accountNumber" type="text"/></td>
                 <td><input class="span2" wicket:id="name" id="name" type="text"/></td>
                 <td><select class="span2" wicket:id="vatType" id="vatType"/></td>
-                <td><select class="span2" wicket:id="financeAccountType" id="financeAccountType" /></td>
-                <td><select class="span2" wicket:id="standardReverseFinanceAccount" id="standardReverseFinanceAccount"/></td>
+                <td><select class="span2" wicket:id="financeAccountType" id="financeAccountType"/></td>
+                <td><select class="span2" wicket:id="standardReverseFinanceAccount" id="standardReverseFinanceAccount"/>
+                </td>
+            </tr>
+            <tr>
+                <td colspan="3"></td>
+                <td><wicket:message key="sum.from"></wicket:message></td>
+                <td><wicket:message key="sum.to"></wicket:message></td>
+                <td></td>
+            </tr>
+            <tr>
+                <td colspan="3"></td>
+                <td><select class="span2" wicket:id="sumFrom" id="sumFrom"/></td>
+                <td><select class="span2" wicket:id="sumTo" id="sumTo"/></td>
+                <td></td>
             </tr>
             <tr>
                 <td colspan="5">
